--- a/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/meterial/package.json
+++ b/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/meterial/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "explore_react",
+  "name": "meterial",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,9 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
